--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<!-- saved from url=(0082)file:///C:/Users/Todd/Downloads/stickshift_landing_with_ratecard_button%20(1).html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StickShift Rides</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
+  <link href="./StickShift Rides_files/css2" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -62,8 +62,8 @@
   <section class="section">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
     <p>We’re not your average rideshare. StickShift connects you with SUV drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear — safely, cleanly, and on time. No stress, no trunk Tetris.</p>
-    <a href="https://forms.gle/Wm8w9GxAk3YVn4VX6" class="btn" target="_blank">Book a Ride</a>
-    <a href="https://forms.gle/1exFX5qPHVmzn1iD9" class="btn" target="_blank">Apply to Drive</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGWFRXi4WB0dIsAfBMYufuAJSIDotl7HhDIynxiqconjmavQ/viewform?usp=dialog" class="btn" target="_blank">Book a Ride</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSQNgb6ja-jMk0YOlP2efxKgtqWon1jqL5NYW5JUA30FFQKA/viewform?usp=dialog" class="btn" target="_blank">Apply to Drive</a>
   </section>
   <section class="section">
     <h2>Why StickShift?</h2>
@@ -71,11 +71,13 @@
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean SUVs, pro drivers, stoke-friendly service</li>
       <li>✅ Invite-only driver network</li>
-      <li>✅ Serving Costa Mesa → SNA, LAX, LGB and beyond</li>
+      <li>✅ Serving Orange County, SNA, LGB, LAX and beyond</li>
     </ul>
+  <a href="file:///C:/Users/Todd/Downloads/stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
   </section>
   <footer class="footer">
     © 2025 StickShift. All rights reserved.
   </footer>
-</body>
-</html>
+
+
+</body></html>
