--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <li>✅ Invite-only driver network</li>
       <li>✅ Serving Orange County airports — gear-ready, flat-rate rides.</li>
     </ul>
-    <a href="file:///C:/Users/Todd/Downloads/stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
+    <a href="stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
   </section>
 
   <footer class="footer">
