--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean SUVs, pro drivers, stoke-friendly service</li>
       <li>✅ Invite-only driver network</li>
-      <li>✅ Serving Orange County airports — gear-ready, flat-rate rides.</li>
+      <li>✅ Serving SNA, LGB, LAX airports and beyond – gear-ready, flat-rate rides.</li>
     </ul>
     <a href="stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
   </section>
