--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 <body>
 
   <header>
-    <h1>StickShift</h1>
-    <p>Airport rides for travelers with boards, bags, and sticks.</p>
-  </header>
+    <header>
+  <img src="stickshift-logo.png" alt="StickShift Rides Logo" style="max-width: 280px; height: auto; margin-bottom: 1rem;">
+  <p>Airport rides for travelers with boards, bags, and sticks.</p>
+</header>
 
   <section class="section">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
