--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
 <body>
 
   <header>
-    <header>
-  <img src="stickshift-logo.png" alt="StickShift Rides Logo" style="max-width: 280px; height: auto; margin-bottom: 1rem;">
+  <img 
+    src="stickshift-logo.png" 
+    alt="StickShift Rides logo with stylized SUV and surfboard" 
+    title="StickShift Rides – Adventure-ready airport transport for gear-heavy travelers"
+    style="max-width: 180px; height: auto; margin-bottom: 1.5rem;">
   <p>Airport rides for travelers with boards, bags, and sticks.</p>
 </header>
+
 
   <section class="section">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
