--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0048)file:///C:/Users/Todd/Downloads/index%20(5).html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StickShift Rides</title>
-  <link href="./StickShift Rides_files/css2" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -18,18 +18,21 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
+    header img {
+      max-width: 180px;
+      height: auto;
+      margin-bottom: 1.5rem;
     }
     header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
+      font-size: 1rem;
+      font-weight: 300;
+      margin-top: 0.75rem;
     }
     .section {
       padding: 2rem;
       max-width: 900px;
       margin: 0 auto;
+      text-align: center;
     }
     .section h2 {
       font-size: 2rem;
@@ -37,13 +40,14 @@
     }
     .btn {
       display: inline-block;
-      margin: 1rem 1rem 0 0;
+      margin: 1rem 0.5rem;
       padding: 0.75rem 1.5rem;
       background-color: #000;
       color: #fff;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
+      text-align: center;
     }
     .footer {
       text-align: center;
@@ -52,19 +56,27 @@
       margin-top: 2rem;
       font-size: 0.9rem;
     }
+
+    /* Fade-in animation */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .fade-in {
+      animation: fadeIn 1s ease-out;
+    }
   </style>
 </head>
 <body>
 
   <header>
-  <img 
-    src="stickshift-logo.png" 
-    alt="StickShift Rides logo with stylized SUV and surfboard" 
-    title="StickShift Rides – Adventure-ready airport transport for gear-heavy travelers"
-    style="max-width: 180px; height: auto; margin-bottom: 1.5rem;">
-  <p>Airport rides for travelers with boards, bags, and sticks.</p>
-</header>
-
+    <img 
+      src="stickshift-logo.png" 
+      alt="StickShift Rides logo with stylized SUV and surfboard" 
+      title="StickShift Rides – Adventure-ready airport transport for gear-heavy travelers"
+      class="fade-in">
+    <p>Airport rides for travelers with boards, bags, and sticks.</p>
+  </header>
 
   <section class="section">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
@@ -75,7 +87,7 @@
 
   <section class="section">
     <h2>Why StickShift?</h2>
-    <ul>
+    <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean SUVs, pro drivers, stoke-friendly service</li>
       <li>✅ Invite-only driver network</li>
@@ -88,8 +100,5 @@
     © 2025 StickShift. All rights reserved.
   </footer>
 
-  <!-- Cache bust comment to force refresh: 2025-04-24 19:27:30.189924 -->
-
-
-
-</body></html>
+</body>
+</html>
