--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <section class="section" style="background-color: #fafafa;">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
-    <p>We’re not your average rideshare. StickShift connects you with SUV drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear — safely, cleanly, and on time. No stress, no trunk Tetris.</p>
+    <p>We’re not your average rideshare. StickShift rides connects you with SUV/Truck/Van drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear - safely, cleanly, and on time. No stress, no trunk Tetris.</p>
     <a href="https://docs.google.com/forms/d/1rKfyyZB4hTksNfScOvYw2KVofpk-yF0fUEemWPjIxP0/viewform" class="btn" target="_blank">Book a Ride</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSQNgb6ja-jMk0YOlP2efxKgtqWon1jqL5NYW5JUA30FFQKA/viewform" class="btn" target="_blank">Apply to Drive</a>
   </section>
@@ -98,8 +98,8 @@
     <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean SUVs, pro drivers, stoke-friendly service</li>
-      <li>✅ Invite-only driver network</li>
-      <li>✅ Serving SNA, LGB, LAX airports and beyond – gear-ready, flat-rate rides.</li>
+      <li>✅ We invite and select drivers through an application process</li>
+      <li>✅ Serving SNA, LGB, LAX airports and beyond - gear-ready, flat-rate rides.</li>
     </ul>
     <a href="stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
   </section>
