--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <h2>Why StickShift?</h2>
     <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
       <li>✅ Guaranteed room for your gear</li>
-      <li>✅ Clean SUVs, pro drivers, stoke-friendly service</li>
+      <li>✅ Clean rides, pro drivers, stoke-friendly service</li>
       <li>✅ We invite and select drivers through an application process</li>
       <li>✅ Serving SNA, LGB, LAX airports and beyond - gear-ready, flat-rate rides.</li>
     </ul>
