--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       <li>✅ We invite and select drivers through an application process</li>
       <li>✅ Serving SNA, LGB, LAX airports and beyond - gear-ready, flat-rate rides.</li>
     </ul>
-    <a href="stickshift_rate_card.pdf" class="btn" target="_blank">📄 View Rate Card</a>
+    <a href="stickshift_rides_rate_card_final_updated.pdf" target="_blank">View Rate Card</a>
+
   </section>
 
   <footer class="footer">
