--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
       <li>✅ We invite and select drivers through an application process</li>
       <li>✅ Serving SNA, LGB, LAX airports and beyond - gear-ready, flat-rate rides.</li>
     </ul>
-    <a href="stickshift_rides_rate_card_final_updated.pdf" target="_blank">View Rate Card</a>
+    <a href="ratecard.pdf" target="_blank" style="display: inline-block; padding: 12px 24px; background-color: #007BFF; color: white; text-decoration: none; border-radius: 6px; font-weight: bold;">
+  View Rate Card
+</a>
 
   </section>
 
