--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
       margin-top: 2rem;
       font-size: 0.9rem;
     }
+
+    ul {
+      text-align: left;
+      max-width: 600px;
+      margin: 0 auto;
+      padding-left: 0;
+      list-style: none;
+    }
+    ul li {
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
@@ -81,30 +92,26 @@
     <img 
       src="stickshift-logo.png" 
       alt="StickShift Rides logo with stylized SUV and surfboard" 
-      title="StickShift Rides – Adventure-ready airport transport for gear-heavy travelers"
-      class="fade-in">
+      title="StickShift Rides – Adventure-ready airport transport for gear-heavy travelers">
     <p>Airport rides for travelers with boards, bags, and sticks.</p>
   </header>
 
   <section class="section" style="background-color: #fafafa;">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
-    <p>We’re not your average rideshare. StickShift rides connects you with SUV/Truck/Van drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear - safely, cleanly, and on time. No stress, no trunk Tetris.</p>
+    <p>We’re not your average rideshare. StickShift Rides connects you with SUV/Truck/Van drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear — safely, cleanly, and on time. No stress, no trunk Tetris.</p>
     <a href="https://docs.google.com/forms/d/1rKfyyZB4hTksNfScOvYw2KVofpk-yF0fUEemWPjIxP0/viewform" class="btn" target="_blank">Book a Ride</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSQNgb6ja-jMk0YOlP2efxKgtqWon1jqL5NYW5JUA30FFQKA/viewform" class="btn" target="_blank">Apply to Drive</a>
+    <a href="ratecard.pdf" class="btn" target="_blank">View Rate Card</a>
   </section>
 
   <section class="section" style="background-color: #fff;">
     <h2>Why StickShift?</h2>
-    <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
+    <ul>
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean rides, pro drivers, stoke-friendly service</li>
       <li>✅ We invite and select drivers through an application process</li>
-      <li>✅ Serving SNA, LGB, LAX airports and beyond - gear-ready, flat-rate rides.</li>
+      <li>✅ Serving SNA, LGB, LAX airports and beyond — gear-ready, straightforward pricing</li>
     </ul>
-    <a href="ratecard.pdf" target="_blank" style="display: inline-block; padding: 12px 24px; background-color: #007BFF; color: white; text-decoration: none; border-radius: 6px; font-weight: bold;">
-  View Rate Card
-</a>
-
   </section>
 
   <footer class="footer">
