--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section class="section" style="background-color: #fafafa;">
     <h2>Private Rides for Gear-Heavy Travelers</h2>
     <p>We’re not your average rideshare. StickShift Rides connects you with SUV/Truck/Van drivers who understand how to haul your surfboards, snowboards, golf clubs, and oversized gear — safely, cleanly, and on time. No stress, no trunk Tetris.</p>
-    https://docs.google.com/forms/d/e/1FAIpQLSfGWFRXi4WB0dIsAfBMYufuAJSIDotl7HhDIynxiqconjmavQ/viewform?usp=header
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGWFRXi4WB0dIsAfBMYufuAJSIDotl7HhDIynxiqconjmavQ/viewform" class="btn" target="_blank">Book a Ride</a>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSQNgb6ja-jMk0YOlP2efxKgtqWon1jqL5NYW5JUA30FFQKA/viewform" class="btn" target="_blank">Apply to Drive</a>
     <a href="ratecard.pdf" class="btn" target="_blank">View Rate Card</a>
   </section>
