--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <li>✅ Guaranteed room for your gear</li>
       <li>✅ Clean rides, pro drivers, stoke-friendly service</li>
       <li>✅ We invite and select drivers through an application process</li>
-      <li>✅ Serving SNA, LGB, LAX airports and beyond — gear-ready, straightforward pricing</li>
+      <li>✅ Serving SNA, LGB, LAX airports and beyond</li>
     </ul>
   </section>
 
